--- a/templates/single.html
+++ b/templates/single.html
@@ -1,8 +1,20 @@
 <!-- wp:template-part {"slug":"header","theme":"BlockThemeCourse","area":"uncategorized"} /-->
 
 <!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:post-title /-->
+<div class="wp-block-group"><!-- wp:post-featured-image /-->
 
+    <!-- wp:columns -->
+    <div class="wp-block-columns"><!-- wp:column -->
+    <div class="wp-block-column"><!-- wp:post-author {"textAlign":"center","showAvatar":false} /--></div>
+    <!-- /wp:column -->
+    
+    <!-- wp:column -->
+    <div class="wp-block-column"><!-- wp:post-date /--></div>
+    <!-- /wp:column --></div>
+    <!-- /wp:columns -->
+    
+    <!-- wp:post-title /-->
+    
     <!-- wp:post-content /--></div>
     <!-- /wp:group -->
     
