--- a/templates/single.html
+++ b/templates/single.html
@@ -9,11 +9,11 @@
     <!-- /wp:column -->
     
     <!-- wp:column -->
-    <div class="wp-block-column"><!-- wp:post-date /--></div>
+    <div class="wp-block-column"><!-- wp:post-date {"textAlign":"center"} /--></div>
     <!-- /wp:column --></div>
     <!-- /wp:columns -->
     
-    <!-- wp:post-title /-->
+    <!-- wp:post-title {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}},"fontSize":"x-large"} /-->
     
     <!-- wp:post-content /--></div>
     <!-- /wp:group -->
