--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 /*
 Theme Name: BlockThemeCourse
+Theme URI: https://github.com/maurodf0/BlockThemeCourse
 Author: Mauro De Falco
+Author URI: https://maurodefalco.it/
 Description: First attempt to block theme development
-Version: 0.1
-Requires at least: Wordpress 6.2
-Tested up to: Wordpress 6.2
+Requires at least: 6.0
+Tested up to: 6.2.2
 Requires PHP: 7.4
-License: The license of the theme.
-License URI: The URL of the theme license.
+Version: 0.1
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: btc
+Tags: 
+*/
