--- a/templates/archive.html
+++ b/templates/archive.html
@@ -9,7 +9,7 @@
     <div class="wp-block-query"><!-- wp:post-template -->
     <!-- wp:post-featured-image /-->
     
-    <!-- wp:post-title {"isLink":true,"fontSize":"large"} /-->
+    <!-- wp:post-title {"isLink":true,"style":{"elements":{"link":{"color":{"text":"var:preset|color|white"}}}},"fontSize":"large"} /-->
     
     <!-- wp:post-author {"showAvatar":false} /-->
     
