--- a/templates/single.html
+++ b/templates/single.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"BlockThemeCourse","area":"uncategorized"} /-->
+<!-- wp:template-part {"slug":"header","theme":"BlockThemeCourse","area":"header"} /-->
 
 <!-- wp:group {"layout":{"type":"constrained"}} -->
 <div class="wp-block-group"><!-- wp:post-featured-image /-->
@@ -17,5 +17,7 @@
     
     <!-- wp:post-content /--></div>
     <!-- /wp:group -->
+
+        <!-- wp:template-part {"slug":"comments","theme":"BlockThemeCourse","area":"comments"} /-->
     
-    <!-- wp:template-part {"slug":"footer","theme":"BlockThemeCourse","area":"uncategorized"} /-->
+    <!-- wp:template-part {"slug":"footer","theme":"BlockThemeCourse","area":"footer"} /-->
