--- a/templates/single.html
+++ b/templates/single.html
@@ -1,23 +1,35 @@
-<!-- wp:template-part {"slug":"header","theme":"BlockThemeCourse","area":"header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"BlockThemeCourse","area":"uncategorized"} /-->
 
-<!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:post-featured-image /-->
+<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|80"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--80)"><!-- wp:post-title {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}},"fontSize":"x-large"} /-->
 
-    <!-- wp:columns -->
+    <!-- wp:post-featured-image {"align":"center"} /-->
+    
+    <!-- wp:group {"layout":{"type":"constrained"}} -->
+    <div class="wp-block-group"><!-- wp:columns -->
     <div class="wp-block-columns"><!-- wp:column -->
-    <div class="wp-block-column"><!-- wp:post-author {"textAlign":"center","showAvatar":false} /--></div>
+    <div class="wp-block-column"><!-- wp:post-author {"textAlign":"center","showAvatar":false,"byline":""} /--></div>
+    <!-- /wp:column -->
+    
+    <!-- wp:column -->
+    <div class="wp-block-column"><!-- wp:post-time-to-read {"textAlign":"center"} /--></div>
     <!-- /wp:column -->
     
     <!-- wp:column -->
     <div class="wp-block-column"><!-- wp:post-date {"textAlign":"center"} /--></div>
     <!-- /wp:column --></div>
-    <!-- /wp:columns -->
-    
-    <!-- wp:post-title {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}},"fontSize":"x-large"} /-->
-    
-    <!-- wp:post-content /--></div>
+    <!-- /wp:columns --></div>
     <!-- /wp:group -->
-
-        <!-- wp:template-part {"slug":"comments","theme":"BlockThemeCourse","area":"comments"} /-->
     
-    <!-- wp:template-part {"slug":"footer","theme":"BlockThemeCourse","area":"footer"} /-->
+    <!-- wp:post-content /-->
+    
+    <!-- wp:post-terms {"term":"category"} /-->
+    
+    <!-- wp:post-terms {"term":"post_tag","style":{"typography":{"fontStyle":"italic","fontWeight":"300"}}} /--></div>
+    <!-- /wp:group -->
+    
+    <!-- wp:group {"layout":{"type":"constrained","wideSize":"800px"}} -->
+    <div class="wp-block-group"><!-- wp:template-part {"slug":"comments","theme":"BlockThemeCourse","area":"comments"} /--></div>
+    <!-- /wp:group -->
+    
+    <!-- wp:template-part {"slug":"footer","theme":"BlockThemeCourse","area":"uncategorized"} /-->
