--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ mark {
 }
     
 
- .main-h1:before {
+.main-h1:before {
         position: absolute;
         content: "";
         z-index: -1;
@@ -36,9 +36,12 @@ mark {
         bottom: 10%;
         width: 150%;
         left: -25%;
-    background: repeat,linear-gradient(83.21deg,var(--wp--preset--color-primary) 0%, var(--wp--preset--color--secondary) 100%);
+        background: repeat,linear-gradient(83.21deg,var(--wp--preset--color-primary) 0%, var(--wp--preset--color--secondary) 100%);
         background-blend-mode: overlay;
         -webkit-mask-image: radial-gradient(rgba(0,0,0,.5),transparent 70%);
         mask-image: radial-gradient(rgba(0,0,0,.5),transparent 70%);
- }
+}
 
+h1,h2,h3 {
+    text-wrap: balance;
+}
