--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,12 @@
 
 <!-- wp:group {"layout":{"type":"constrained"},"fontSize":"x-large"} -->
 <div class="wp-block-group has-x-large-font-size"><!-- wp:heading {"textAlign":"center","style":{"typography":{"fontStyle":"normal","fontWeight":"100","lineHeight":"1.2"},"spacing":{"padding":{"top":"var:preset|spacing|80","right":"var:preset|spacing|80","bottom":"var:preset|spacing|80","left":"var:preset|spacing|80"},"margin":{"top":"var:preset|spacing|40","right":"var:preset|spacing|40","bottom":"var:preset|spacing|40","left":"var:preset|spacing|40"}}},"className":"main-h1","fontSize":"x-large"} -->
-    <h2 class="wp-block-heading has-text-align-center main-h1 has-x-large-font-size" style="margin-top:var(--wp--preset--spacing--40);margin-right:var(--wp--preset--spacing--40);margin-bottom:var(--wp--preset--spacing--40);margin-left:var(--wp--preset--spacing--40);padding-top:var(--wp--preset--spacing--80);padding-right:var(--wp--preset--spacing--80);padding-bottom:var(--wp--preset--spacing--80);padding-left:var(--wp--preset--spacing--80);font-style:normal;font-weight:100;line-height:1.2">Hi, <em>i'm Mauro</em> i work as <strong>Frontend Developer </strong>&amp; <strong>Wordpress Developer</strong>, <em>Welcome to my Blog</em>.</h2>
+    <h2 class="wp-block-heading has-text-align-center main-h1 has-x-large-font-size" style="margin-top:var(--wp--preset--spacing--40);margin-right:var(--wp--preset--spacing--40);margin-bottom:var(--wp--preset--spacing--40);margin-left:var(--wp--preset--spacing--40);padding-top:var(--wp--preset--spacing--80);padding-right:var(--wp--preset--spacing--80);padding-bottom:var(--wp--preset--spacing--80);padding-left:var(--wp--preset--spacing--80);font-style:normal;font-weight:100;line-height:1.2">Hi, I'm <mark style="background-color:var(--wp--preset--color--primary)" class="has-inline-color has-text-color"><strong>Grainy</strong></mark>, a <em>powerful</em> <strong>Block Theme</strong> for <strong>Blog</strong>. You can <strong>create everything</strong><em> with me.</em></h2>
     <!-- /wp:heading --></div>
     <!-- /wp:group -->
     
-    <!-- wp:query {"queryId":29,"query":{"perPage":"10","pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false},"displayLayout":{"type":"list","columns":3},"layout":{"type":"constrained"}} -->
-    <div class="wp-block-query"><!-- wp:post-template -->
+    <!-- wp:query {"queryId":29,"query":{"perPage":"10","pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false},"layout":{"type":"constrained"}} -->
+    <div class="wp-block-query"><!-- wp:post-template {"layout":{"type":"default","columnCount":3}} -->
     <!-- wp:group {"style":{"spacing":{"padding":{"top":"0","right":"0","bottom":"0","left":"0"}}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"stretch","orientation":"vertical"}} -->
     <div class="wp-block-group" style="padding-top:0;padding-right:0;padding-bottom:0;padding-left:0"><!-- wp:columns -->
     <div class="wp-block-columns"><!-- wp:column {"width":"80%"} -->
