changed colors and edited template for export

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"BlockThemeCourse","tagName":"header","className":"site-header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"Grainy","tagName":"header","className":"site-header"} /-->
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
 <main class="wp-block-group"><!-- wp:query-title {"type":"archive","fontSize":"x-large"} /-->
@@ -28,4 +28,4 @@
     <!-- /wp:query --></main>
     <!-- /wp:group -->
     
-    <!-- wp:template-part {"slug":"footer","theme":"BlockThemeCourse","tagName":"footer","className":"site-footer"} /-->
+    <!-- wp:template-part {"slug":"footer","theme":"Grainy","tagName":"footer","className":"site-footer"} /-->
