--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"BlockThemeCourse","tagName":"header","className":"site-header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"Grainy","tagName":"header","className":"site-header"} /-->
 
 <!-- wp:group {"layout":{"type":"constrained"},"fontSize":"x-large"} -->
 <div class="wp-block-group has-x-large-font-size"><!-- wp:heading {"textAlign":"center","style":{"typography":{"fontStyle":"normal","fontWeight":"100","lineHeight":"1.2"},"spacing":{"padding":{"top":"var:preset|spacing|80","right":"var:preset|spacing|80","bottom":"var:preset|spacing|80","left":"var:preset|spacing|80"},"margin":{"top":"var:preset|spacing|40","right":"var:preset|spacing|40","bottom":"var:preset|spacing|40","left":"var:preset|spacing|40"}}},"className":"main-h1","fontSize":"x-large"} -->
@@ -40,4 +40,4 @@
     <!-- /wp:query-no-results --></div>
     <!-- /wp:query -->
     
-    <!-- wp:template-part {"slug":"footer","theme":"BlockThemeCourse","tagName":"footer","className":"site-footer"} /-->
+    <!-- wp:template-part {"slug":"footer","theme":"Grainy","tagName":"footer","className":"site-footer"} /-->
