--- a/templates/single.html
+++ b/templates/single.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"BlockThemeCourse","area":"uncategorized"} /-->
+<!-- wp:template-part {"slug":"header","theme":"Grainy","area":"uncategorized"} /-->
 
 <!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|80"}}},"layout":{"type":"constrained"}} -->
 <div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--80)"><!-- wp:post-title {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}},"fontSize":"x-large"} /-->
@@ -32,4 +32,4 @@
     <div class="wp-block-group"><!-- wp:template-part {"slug":"comments","theme":"BlockThemeCourse","area":"comments"} /--></div>
     <!-- /wp:group -->
     
-    <!-- wp:template-part {"slug":"footer","theme":"BlockThemeCourse","area":"uncategorized"} /-->
+    <!-- wp:template-part {"slug":"footer","theme":"Grainy","area":"uncategorized"} /-->
