Completed Theme after submitted in Wordpress Repo

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,17 +1,17 @@
-<!-- wp:template-part {"slug":"header","theme":"Grainy","tagName":"header","className":"site-header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
 
-<!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:group {"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch","flexWrap":"wrap"}} -->
-	<div class="wp-block-group"><!-- wp:heading {"textAlign":"center"} -->
-	<h2 class="wp-block-heading has-text-align-center">Oops.. Page not found</h2>
-	<!-- /wp:heading -->
-	
-	<!-- wp:paragraph {"align":"center"} -->
-	<p class="has-text-align-center">Go back to Homepage or make a research</p>
-	<!-- /wp:paragraph -->
-	
-	<!-- wp:search {"label":"Cerca","buttonText":"Cerca"} /--></div>
-	<!-- /wp:group --></div>
-	<!-- /wp:group -->
-	
-	<!-- wp:template-part {"slug":"footer","theme":"Grainy","tagName":"footer","className":"site-footer"} /-->
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
+<main class="wp-block-group"><!-- wp:group {"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch","flexWrap":"wrap"}} -->
+<div class="wp-block-group"><!-- wp:heading {"textAlign":"center"} -->
+<h2 class="wp-block-heading has-text-align-center">Oops.. Page not found</h2>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph {"align":"center"} -->
+<p class="has-text-align-center">Go back to Homepage or make a research</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:search {"label":"Cerca","buttonText":"Cerca"} /--></div>
+<!-- /wp:group --></main>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
