--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /*
 Theme Name: Grainy
-Theme URI: https://github.com/maurodf0/BlockThemeCourse
+Theme URI: https://github.com/maurodf0/Grainy
 Author: Mauro De Falco
 Author URI: https://maurodefalco.it/
-Description: First attempt to block theme development
+Description: Simple yet powerfull Full Block Theme for all blog. Came out with patterns and different styles to match your web site. Create your awesome website with Grainy without coding. Why Grainy? because this theme borns with the idea of a noise pattern into the background. that pattern "granuloso" in Italian, grainy means exactly this.
 Requires at least: 6.2.2
-Tested up to: 6.2.2
+Tested up to: 6.2
 Requires PHP: 7.4
-Version: 0.1
+Version: 0.1.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: grainy
-Tags: 
+Tags: block-patterns, block-styles, blog, custom-background, custom-colors, custom-logo, custom-menu, editor-style, full-site-editing, grid-layout, one-column, photography, portfolio, template-editing, threaded-comments, translation-ready, wide-blocks
 */
 
 /* Add some css for hundle thigs not ready in Gutengerg */
@@ -27,42 +27,21 @@ mark {
     padding:0 5px;
 }
 
-
 h1,h2,h3 {
     text-wrap: balance;
 }
 
-.wp-site-blocks a:not(.wp-block-post-title a, .wp-block-button__link):hover:after {
-    width: 100%;
-}
-
-.wp-site-blocks a:not(.wp-block-post-title a, .wp-block-button__link):after {
-    position: absolute;
-    width: 0;
-    height: 5px;
-    background: var(--wp--preset--color--secondary);
-    left: 0px;
-    bottom: 2px;
-    content: '';
-    right: 0;
-    transition: .4s;
-    z-index: -1;
-}
-
-.wp-site-blocks a:not(.wp-block-post-title a, .wp-block-button__link) {
-    position: relative;
-}
 
  /* Alignfull wp */
 
 .alignfull {
-    margin-left: calc( -100vw / 2 + 100% / 2 );
-	margin-right: calc( -100vw / 2 + 100% / 2 );
+    margin-left: calc( -100vw / 2 + 100% / 2 ) !important;
+	margin-right: calc( -100vw / 2 + 100% / 2 ) !important;
     margin-top:25px;
 	max-width: 100vw;
 }
 
 .alignwide {
-    margin-left  : -80px;
-    margin-right : -80px;
+    margin-left  : -80px !important;
+    margin-right : -80px !important;
 }
