--- a/templates/page.html
+++ b/templates/page.html
@@ -1,15 +1,7 @@
-<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"grainy","tagName":"header","className":"site-header"} /-->
+
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group">
-	<!-- wp:post-featured-image /-->
-	<!-- wp:post-title /-->
-	<!-- wp:spacer {"height":40} -->
-	<div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
-	<!-- /wp:spacer -->
-	<!-- wp:post-content /-->
-	<!-- wp:spacer {"height":100} -->
-	<div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
-	<!-- /wp:spacer -->
-</main>
+<main class="wp-block-group"><!-- wp:post-content {"align":"wide"} /--></main>
 <!-- /wp:group -->
-<!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
+
+<!-- wp:template-part {"slug":"footer","theme":"grainy","tagName":"footer","className":"site-footer"} /-->
