Seo Improved - Fixed Mobile/Padding issue - Add title to pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
-<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"grainy","tagName":"header","className":"site-header"} /-->
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
 <main class="wp-block-group"><!-- wp:group {"align":"wide","layout":{"type":"constrained"},"fontSize":"x-large"} -->
-<div class="wp-block-group alignwide has-x-large-font-size"><!-- wp:heading {"textAlign":"center","style":{"typography":{"fontStyle":"normal","fontWeight":"100","lineHeight":"1.2"},"spacing":{"padding":{"top":"0","right":"var:preset|spacing|50","bottom":"0","left":"var:preset|spacing|50"},"margin":{"top":"var:preset|spacing|40","right":"var:preset|spacing|40","bottom":"var:preset|spacing|40","left":"var:preset|spacing|40"}}},"textColor":"text","className":"main-h1","fontSize":"x-large"} -->
-<h2 class="wp-block-heading has-text-align-center main-h1 has-text-color has-x-large-font-size" style="margin-top:var(--wp--preset--spacing--40);margin-right:var(--wp--preset--spacing--40);margin-bottom:var(--wp--preset--spacing--40);margin-left:var(--wp--preset--spacing--40);padding-top:0;padding-right:var(--wp--preset--spacing--50);padding-bottom:0;padding-left:var(--wp--preset--spacing--50);font-style:normal;font-weight:100;line-height:1.2">I'm <mark style="background-color:var(--wp--preset--color--primary)" class="has-inline-color"><strong>Grainy</strong></mark>. Here my <em>adventure</em>s as <strong>WordPress</strong> and <strong>Tech</strong> <em>Lover</em>. Join Me in <em><strong>my Journey</strong></em></h2>
+<div class="wp-block-group alignwide has-x-large-font-size"><!-- wp:heading {"textAlign":"center","level":1,"style":{"typography":{"fontStyle":"normal","fontWeight":"100","lineHeight":"1.2"},"spacing":{"padding":{"top":"0","right":"var:preset|spacing|50","bottom":"0","left":"var:preset|spacing|50"},"margin":{"top":"var:preset|spacing|40","right":"var:preset|spacing|40","bottom":"var:preset|spacing|40","left":"var:preset|spacing|40"}}},"textColor":"text","className":"main-h1","fontSize":"x-large"} -->
+<h1 class="wp-block-heading has-text-align-center main-h1 has-text-color has-x-large-font-size" style="margin-top:var(--wp--preset--spacing--40);margin-right:var(--wp--preset--spacing--40);margin-bottom:var(--wp--preset--spacing--40);margin-left:var(--wp--preset--spacing--40);padding-top:0;padding-right:var(--wp--preset--spacing--50);padding-bottom:0;padding-left:var(--wp--preset--spacing--50);font-style:normal;font-weight:100;line-height:1.2">I'm <mark style="background-color:var(--wp--preset--color--primary)" class="has-inline-color"><strong>Grainy</strong></mark>. Here my <em>adventure</em>s as <strong>WordPress</strong> and <strong>Tech</strong> <em>Lover</em>. Join Me in <em><strong>my Journey</strong></em></h1>
 <!-- /wp:heading --></div>
 <!-- /wp:group -->
 
@@ -36,4 +36,4 @@
 <!-- /wp:query --></main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
+<!-- wp:template-part {"slug":"footer","theme":"grainy","tagName":"footer","className":"site-footer"} /-->
