--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,9 @@
 <!-- wp:template-part {"slug":"header","theme":"grainy","tagName":"header","className":"site-header"} /-->
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group"><!-- wp:post-content {"align":"wide"} /--></main>
-<!-- /wp:group -->
+<main class="wp-block-group"><!-- wp:post-title {"level":1,"align":"wide"} /-->
 
-<!-- wp:template-part {"slug":"footer","theme":"grainy","tagName":"footer","className":"site-footer"} /-->
+    <!-- wp:post-content {"align":"wide"} /--></main>
+    <!-- /wp:group -->
+    
+    <!-- wp:template-part {"slug":"footer","theme":"grainy","tagName":"footer","className":"site-footer"} /-->
