--- a/templates/single.html
+++ b/templates/single.html
@@ -1,31 +1,31 @@
-<!-- wp:template-part {"slug":"header","area":"uncategorized"} /-->
+<!-- wp:template-part {"slug":"header","theme":"grainy","area":"uncategorized"} /-->
 
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"var:preset|spacing|80"}}},"layout":{"type":"constrained"}} -->
-<main class="wp-block-group" style="margin-top:var(--wp--preset--spacing--80)"><!-- wp:post-title {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}},"fontSize":"x-large"} /-->
+<main class="wp-block-group" style="margin-top:var(--wp--preset--spacing--80)"><!-- wp:post-title {"level":1,"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}},"fontSize":"x-large"} /-->
 
-<!-- wp:post-featured-image {"aspectRatio":"9/16","width":"100%","height":"650px","align":"wide","style":{"spacing":{"padding":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50"}}}} /-->
-
-<!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:columns -->
-<div class="wp-block-columns"><!-- wp:column -->
-<div class="wp-block-column"><!-- wp:post-author {"textAlign":"center","showAvatar":false,"byline":""} /--></div>
-<!-- /wp:column -->
-
-<!-- wp:column -->
-<div class="wp-block-column"><!-- wp:post-date {"textAlign":"center"} /--></div>
-<!-- /wp:column --></div>
-<!-- /wp:columns --></div>
-<!-- /wp:group -->
-
-<!-- wp:post-content /-->
-
-<!-- wp:post-terms {"term":"category"} /-->
-
-<!-- wp:post-terms {"term":"post_tag","style":{"typography":{"fontStyle":"italic","fontWeight":"300"}}} /--></main>
-<!-- /wp:group -->
-
-<!-- wp:group {"layout":{"type":"constrained","wideSize":"800px"}} -->
-<div class="wp-block-group"><!-- wp:template-part {"slug":"comments","area":"comments"} /--></div>
-<!-- /wp:group -->
-
-<!-- wp:template-part {"slug":"footer","area":"uncategorized"} /-->
+    <!-- wp:post-featured-image {"aspectRatio":"9/16","width":"100%","height":"650px","align":"wide","style":{"spacing":{"padding":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50"}}}} /-->
+    
+    <!-- wp:group {"layout":{"type":"constrained"}} -->
+    <div class="wp-block-group"><!-- wp:columns -->
+    <div class="wp-block-columns"><!-- wp:column -->
+    <div class="wp-block-column"><!-- wp:post-author {"textAlign":"center","showAvatar":false,"byline":""} /--></div>
+    <!-- /wp:column -->
+    
+    <!-- wp:column -->
+    <div class="wp-block-column"><!-- wp:post-date {"textAlign":"center"} /--></div>
+    <!-- /wp:column --></div>
+    <!-- /wp:columns --></div>
+    <!-- /wp:group -->
+    
+    <!-- wp:post-content /-->
+    
+    <!-- wp:post-terms {"term":"category"} /-->
+    
+    <!-- wp:post-terms {"term":"post_tag","style":{"typography":{"fontStyle":"italic","fontWeight":"300"}}} /--></main>
+    <!-- /wp:group -->
+    
+    <!-- wp:group {"layout":{"type":"constrained","wideSize":"800px"}} -->
+    <div class="wp-block-group"><!-- wp:template-part {"slug":"comments","theme":"grainy","area":"comments"} /--></div>
+    <!-- /wp:group -->
+    
+    <!-- wp:template-part {"slug":"footer","theme":"grainy","area":"uncategorized"} /-->
