--- a/templates/boxed-template-featured-image.html
+++ b/templates/boxed-template-featured-image.html
@@ -3,7 +3,7 @@
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
 <main class="wp-block-group"><!-- wp:post-featured-image /-->
 
-    <!-- wp:post-title /-->
+    <!-- wp:post-title {"level":1} /-->
     
     <!-- wp:spacer {"height":"40px"} -->
     <div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
